2007-07-26  David Hyatt  <hyatt@apple.com>

        FIx for <rdar://problem/5289721> CrashTracer: [REGRESSION] 2658 crashes in Safari at com.apple.WebCore: WebCore::RenderInline::height const + 16

        Adding a null check for now and an assert.  We don't know how/why this
        bug happens, but hopefully the assert will help people to reproduce.

        Reviewed by kevin

        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::height):

2007-07-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Oliver.

        <rdar://problem/5362783>
        In Mail, a crash occurs at WTF::fastMalloc() when attempting to create a new HTML message from http://nytimes.com/
        
        If the cache is disabled and there is already a resource with the given URL, return it instead of creating a new one.
        
        * loader/DocLoader.cpp:
        (WebCore::DocLoader::requestResource):

2007-07-26  Adele Peterson  <adele@apple.com>

        Reviewed by Geoff. 

        Build fix.

        * platform/network/cf/ResourceRequest.h:

2007-07-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/5349389> 
        Some frame load delegate methods not called when loading a page from the BF cache
        
        These calls were moved to FrameLoader::begin, which is never called for pages loaded
        from the BF cache. This happened in revision 24490.
         
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::transitionToCommitted):
        Call delegate methods if the load is from the BF cache.

2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Darin, Geoff and Sam.

        - <rdar://problem/5150461> Resizing the window larger than the screen causes no resize.
        - We now better match the behavior of other browsers.

        * bindings/js/kjs_window.cpp:
        (KJS::constrainToVisible):
        (KJS::WindowFunc::callAsFunction):
